@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-11-14T01:41:35Z",
-  "count" : 129,
+  "timestamp" : "2024-11-27T01:49:32Z",
+  "count" : 53,
   "count_minmax" : [ 30, 129 ],
-  "count_decinc" : [ -0, +129 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "count_decinc" : [ -76, +129 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
