@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-11-26T01:48:04Z",
-  "count" : 25,
-  "count_minmax" : [ 25, 25 ],
-  "count_decinc" : [ -0, +25 ],
+  "timestamp" : "2024-11-27T01:49:32Z",
+  "count" : 125,
+  "count_minmax" : [ 25, 125 ],
+  "count_decinc" : [ -0, +125 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
