@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2024-11-26T01:48:04Z",
-  "count_outdated" : 233333,
-  "uniques_outdated" : 2306,
-  "count" : 235126,
-  "uniques" : 2325,
+  "timestamp" : "2024-11-27T01:49:32Z",
+  "count_outdated" : 233461,
+  "uniques_outdated" : 2307,
+  "count" : 235249,
+  "uniques" : 2326,
   "clones" : [
     {
-      "timestamp": "2024-11-12T00:00:00Z",
-      "count": 53,
-      "count_minmax": [ 29, 128 ],
-      "count_decinc": [ 75, 128 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-11-13T00:00:00Z",
-      "count": 129,
+      "count": 53,
       "count_minmax": [ 30, 129 ],
-      "count_decinc": [ 0, 129 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count_decinc": [ 76, 129 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2024-11-14T00:00:00Z",
@@ -133,12 +124,21 @@
     },
     {
       "timestamp": "2024-11-26T00:00:00Z",
-      "count": 25,
-      "count_minmax": [ 25, 25 ],
-      "count_decinc": [ 0, 25 ],
+      "count": 125,
+      "count_minmax": [ 25, 125 ],
+      "count_decinc": [ 0, 125 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-11-27T00:00:00Z",
+      "count": 23,
+      "count_minmax": [ 23, 23 ],
+      "count_decinc": [ 0, 23 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
