@@ -1,16 +1,11 @@
 {
-  "count": 1718,
+  "count": 1712,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2024-11-12T00:00:00Z",
+      "timestamp": "2024-11-13T00:00:00Z",
       "count": 53,
       "uniques": 1
-    },
-    {
-      "timestamp": "2024-11-13T00:00:00Z",
-      "count": 129,
-      "uniques": 2
     },
     {
       "timestamp": "2024-11-14T00:00:00Z",
@@ -74,8 +69,13 @@
     },
     {
       "timestamp": "2024-11-26T00:00:00Z",
-      "count": 25,
+      "count": 125,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-11-27T00:00:00Z",
+      "count": 23,
+      "uniques": 1
     }
   ]
 }
