@@ -1,3 +1,12 @@
+2024-11-27T01:49:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12042236294 # 492
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-27
+* notice: last 14d: unq all: 4 1712
+* notice: prev accum: outdated-unq outdated-all / unq all: 2306 233333 / 2325 235126
+* notice: next accum: outdated-unq outdated-all / unq all: 2307 233461 / 2326 235249
+* notice: prev exec diff / last date diff / accum: unq all: +1 +123 -1 -76 / +1 +23 -0 -0 / 1 23
+* notice: removed / changed dates: [2024-11-12] / [2024-11-13 2024-11-26 2024-11-27]
+
 2024-11-26T01:48:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12022226673 # 491
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-26
